--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <meta name="viewport" content="height=device-height width=device-width, initial-scale=1.0">
 </head>
 <body>
-<a href="test.html">hi</a>
+<a href="test.html"><p>hi</p></a>
 </body>
 </html>
