--- a/home.html
+++ b/home.html
@@ -7,6 +7,8 @@
 <meta name="viewport" content="height=device-height width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <div id="header"></div>
+    <div id="header">
+        hi
+    </div>
 </body>
 </html>
