--- a/home.html
+++ b/home.html
@@ -3,9 +3,15 @@
 <head>
     <link rel="icon" type="image/x-icon" href='oceans.png'>
     <link rel="stylesheet" href="oceanstyles.css">
-    <title>Oceans</title>
+    <title>Water Power</title>
     <meta name="viewport" content="height=device-height width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <div id="header">
+        <h1>Water Power</h1>
+    </div>
+    <div id="sidebar">
+        <h1>Menu</h1>
+    </div>
 </body>
 </html>
