--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="icon" type="image/x-icon" href='oceans.png'>
     <link rel="stylesheet" href="oceanstyles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Water Power</title>
     <meta name="viewport" content="height=device-height width=device-width, initial-scale=1.0">
 </head>
@@ -11,7 +12,20 @@
         <h1>Water Power</h1>
     </div>
     <div id="sidebar">
-        <h1>Menu</h1>
+        <span class="material-symbols-outlined">expand_more</span>
+        <h1 style="margin-right: 2.5vw">Menu</h1>
+        <div id="sidebarpiece">
+            <p>Home</p>
+        </div>
+        <div id="sidebarpiece">
+            <p>Subpage 1</p>
+        </div>
+        <div id="sidebarpiece">
+            <p>Subpage 2</p>
+        </div>
+        <div id="sidebarpiece">
+            <p>Subpage 3</p>
+        </div>
     </div>
 </body>
 </html>
