--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
         <h1>Water Power</h1>
     </div>
     <div id="sidebar">
-        <span class="material-symbols-outlined">expand_more</span>
-        <h1 style="margin-right: 2.5vw">Menu</h1>
+        <span class="material-symbols-outlined md-36">expand_more</span>
+        <h1 style="margin-right: 2vw">Menu</h1>
         <div id="sidebarpiece">
             <p>Home</p>
         </div>
