--- a/home.html
+++ b/home.html
@@ -28,5 +28,8 @@
         </div>
     </div>
     <div id="content"></div>
+    <div id="footer">
+        <p style="color:rgb(46, 218, 138)">Copyright Adam Haspel 2022. All Rights Reserved.</p>
+    </div>
 </body>
 </html>
