--- a/home.html
+++ b/home.html
@@ -26,6 +26,9 @@
         <div id="sidebarpiece">
             <p>Subpage 3</p>
         </div>
+        <div id="sidebarpiece">
+            <p>Subpage 4</p>
+        </div>
     </div>
     <div id="content"></div>
     <div id="footer">
