--- a/home.html
+++ b/home.html
@@ -14,25 +14,25 @@
     <div id="sidebar">
         <span class="material-symbols-outlined md-36">expand_more</span>
         <h1 style="margin-right: 2vw">Menu</h1>
-        <div id="sidebarpiece">
+        <a href="home.html"><div id="sidebarpiece">
             <p>Home</p>
-        </div>
-        <div id="sidebarpiece">
-            <p>Subpage 1</p>
-        </div>
-        <div id="sidebarpiece">
-            <p>Subpage 2</p>
-        </div>
-        <div id="sidebarpiece">
-            <p>Subpage 3</p>
-        </div>
-        <div id="sidebarpiece">
-            <p>Subpage 4</p>
-        </div>
+        </div></a>
+        <a href="history.html"><div id="sidebarpiece">
+            <p>History</p>
+        </div></a>
+        <a href="modern.html"><div id="sidebarpiece">
+            <p>Modern Use</p>
+        </div></a>
+        <a href="climate.html"><div id="sidebarpiece">
+            <p>Climate Effect</p>
+        </div></a>
+        <a href="works.html"><div id="sidebarpiece">
+            <p>How It Works</p>
+        </div></a>
     </div>
     <div id="content"></div>
     <div id="footer">
-        <p style="color:rgb(46, 218, 138)">Copyright Adam Haspel 2022. All Rights Reserved.</p>
+        <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Citations & Copyright</a></p>
     </div>
 </body>
 </html>
