--- a/home.html
+++ b/home.html
@@ -30,7 +30,9 @@
             <p>How It Works</p>
         </div></a>
     </div>
-    <div id="content"></div>
+    <div id="content">
+        <p style="float: left; margin-left: 1vw; margin-top: 1vh">Water Power is an important source of energy. It gives power to tons of people and </p>
+    </div>
     <div id="footer">
         <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Citations & Copyright</a></p>
     </div>
