--- a/history.html
+++ b/history.html
@@ -4,9 +4,31 @@
     <link rel="icon" type="image/x-icon" href='oceans.png'>
     <link rel="stylesheet" href="oceanstyles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>sampletext</title>
+    <title>The History of Water Power</title>
     <meta name="viewport" content="height=device-height width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <div id="header">
+        <h1>The History of Water Power</h1>
+    </div>
+    <div id="sidebar">
+        <span class="material-symbols-outlined md-36">expand_more</span>
+        <h1 style="margin-right: 2vw">Menu</h1>
+        <a href="home.html"><div id="sidebarpiece">
+            <p>Home</p>
+        </div></a>
+        <a href="history.html"><div id="sidebarpiece">
+            <p>History</p>
+        </div></a>
+        <a href="modern.html"><div id="sidebarpiece">
+            <p>Modern Use</p>
+        </div></a>
+        <a href="climate.html"><div id="sidebarpiece">
+            <p>Climate Effect</p>
+        </div></a>
+        <a href="works.html"><div id="sidebarpiece">
+            <p>How It Works</p>
+        </div></a>
+    </div>
 </body>
 </html>
