--- a/history.html
+++ b/history.html
@@ -30,5 +30,8 @@
             <p>How It Works</p>
         </div></a>
     </div>
+    <div id="content">
+        test
+    </div>
 </body>
 </html>
