--- a/home.html
+++ b/home.html
@@ -31,7 +31,10 @@
         </div></a>
     </div>
     <div id="content">
-        <p style="float: left; margin-left: 1vw; margin-top: 1vh">Water Power is an important source of energy. It gives power to tons of people and </p>
+        <p style="float: left; margin-left: 2.5vw; margin-top: 5vh">Water Power is an important source of energy. It gives power to tons of people and devices. It harnesses the movement and cycle of water and its vast flowing rivers.
+        <br><br>Its vast history built up empires and helped poeple crush others. Water power was not only used for war, poeple also used it to move objects and power mills.
+        <br><br>However, it may have</p>
+        <img src="3l-Akosombo.jpg" height="200" style="margin-bottom: 100vw;">
     </div>
     <div id="footer">
         <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Citations & Copyright</a></p>
