--- a/climate.html
+++ b/climate.html
@@ -8,5 +8,39 @@
     <meta name="viewport" content="height=device-height width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <div id="header">
+        <h1>The History of Water Power</h1>
+    </div>
+    <div id="sidebar">
+        <span class="material-symbols-outlined md-36">expand_more</span>
+        <h1 style="margin-right: 2vw">Menu</h1>
+        <a href="home.html"><div id="sidebarpiece">
+            <p>Home</p>
+        </div></a>
+        <a href="history.html"><div id="sidebarpiece">
+            <p>History</p>
+        </div></a>
+        <a href="modern.html"><div id="sidebarpiece">
+            <p>Modern Use</p>
+        </div></a>
+        <a href="climate.html"><div id="sidebarpiece">
+            <p>Climate Effect</p>
+        </div></a>
+        <a href="works.html"><div id="sidebarpiece">
+            <p>How It Works</p>
+        </div></a>
+    </div>
+    <div id="content" style="padding-right: 0; width: 77vw; height: 65vh">
+        <p>Hydroelectricity may have its benefits, but its effect on its environment is undeniable. It may not pollute the air, but it affects the surrounding communities and ecosystems around the dam.
+        <br><br>Hover over the images below to see the text.</p>
+        <img src="Salmon-in-River-4-by-6.jpg" id="imgclimate">
+        <div id="invisidiv"><p id="backtext"><br>The dams interrupt fishing migration and movement patterns. This leads to the fish population decreasing because they can't lay their eggs. Dams also raise the temperature in their river, harming plants, fish, and maybe even human life.</p></div>
+        <img src="Salmon-in-River-4-by-6.jpg" id="imgclimate">
+        <div id="invisidiv"><p id="backtext"><br>The dams interrupt fishing migration and movement patterns. This leads to the fish population decreasing because they can't lay their eggs. Dams also raise the temperature in their river, harming plants, fish, and maybe even human life.</p></div>
+    </div>
+    <div id="footer" style="margin-top: 69.5vh;">
+        <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
+    </div>
+    <div id="filler"></div>
 </body>
 </html>
