--- a/history.html
+++ b/history.html
@@ -31,7 +31,9 @@
         </div></a>
     </div>
     <div id="content">
-        test
+    </div>
+    <div id="footer">
+        <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
 </body>
 </html>
