--- a/home.html
+++ b/home.html
@@ -35,10 +35,11 @@
         <br><br>Its vast history built up empires and helped poeple crush others. Water power was not only used for war, poeple also used it to move objects and power mills.
         <br><br>However, it can damage the ecosystem by changing many natural forces and kill animals. Water power isn't all that bad, it is better for the eviroment that many other energy sources.
         <br><br>Water power can't be fully understood if people don't know how water power is harnessed. It is made from two main methods, dams and the way of the river which both rely on the water cycyle.</p>
-        <img src="3l-Akosombo.jpg" height="200">
+        <img src="water-wheel.jpg" id="imghome" style="width: 19vw; bottom: 53vh;">
+        <img src="3l-Akosombo.jpg" id="imghome" style="width: 19vw;">
     </div>
     <div id="footer">
-        <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Citations & Copyright</a></p>
+        <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
 </body>
 </html>
