--- a/climate.html
+++ b/climate.html
@@ -4,12 +4,12 @@
     <link rel="icon" type="image/x-icon" href='oceans.png'>
     <link rel="stylesheet" href="oceanstyles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>sampletext</title>
+    <title>The Climate Effect of Water Power</title>
     <meta name="viewport" content="height=device-height width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div id="header">
-        <h1>The History of Water Power</h1>
+        <h1>The Climate Effect of Water Power</h1>
     </div>
     <div id="sidebar">
         <span class="material-symbols-outlined md-36">expand_more</span>
