--- a/climate.html
+++ b/climate.html
@@ -30,16 +30,19 @@
             <p>How It Works</p>
         </div></a>
     </div>
-    <div id="content" style="padding-right: 0; width: 77vw; height: 65vh">
+    <div id="content" style="padding-right: 0; width: 77vw; height: 80vh">
         <p>Hydroelectricity may have its benefits, but its effect on its environment is undeniable. It may not pollute the air, but it affects the surrounding communities and ecosystems around the dam.
         <br><br>Hover over the images below to see the text.</p>
         <img src="Salmon-in-River-4-by-6.jpg" id="imgclimate">
         <div id="invisidiv"><p id="backtext"><br>The dams interrupt fishing migration and movement patterns. This leads to the fish population decreasing because they can't lay their eggs. Dams also raise the temperature in their river, harming plants, fish, and maybe even human life.</p></div>
-        <img src="Salmon-in-River-4-by-6.jpg" id="imgclimate">
-        <div id="invisidiv"><p id="backtext"><br>The dams interrupt fishing migration and movement patterns. This leads to the fish population decreasing because they can't lay their eggs. Dams also raise the temperature in their river, harming plants, fish, and maybe even human life.</p></div>
+        <img src="Surface_water_des02.png" id="imgclimate">
+        <div id="invisidiv"><p id="backtext"><br>The reservoirs near the dams also cause problems. The methane stored in the reservoirs may be emitted straight into the atmosphere, fueling the greenhouse effect and strengthening global warming. Also, these reservoirs may cover people's homes, important natural locations, and agricultural areas, causing a multitude of problems.</p></div>
+        <img src="generating-cost-savings-1180x786.jpg" id="imgclimate">
+        <div id="invisidiv"><p id="backtext"><br>Another problem with water power is its immense cost. It costs a lot of money (and time) to build a big bridge with turbines and generators. The cost to maintain is also high. Things like leakages, turbine malfunctions, and breakages drive up the cost a lot.</p></div>
+        <p style="margin-top: 57.5vh"><br><br>Water power may have its advantages, but it still has its flipsides.</p>
     </div>
-    <div id="footer" style="margin-top: 69.5vh;">
-        <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
+    <div id="footer" style="margin-top: 84.5vh;">
+    <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
     <div id="filler"></div>
 </body>
