--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
             <p>Modern Use</p>
         </div></a>
         <a href="climate.html"><div id="sidebarpiece">
-            <p>CProblems</p>
+            <p>Problems</p>
         </div></a>
         <a href="works.html"><div id="sidebarpiece">
             <p>How It Works</p>
