--- a/climate.html
+++ b/climate.html
@@ -42,7 +42,7 @@
         <p style="margin-top: 57.5vh"><br><br>Water power may have its advantages, but it still has its flipsides.</p>
     </div>
     <div id="footer" style="margin-top: 84.5vh;">
-    <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
+    <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
     <div id="filler"></div>
 </body>
