--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
         <img src="3l-Akosombo.jpg" id="imghome" style="width: 19vw;">
     </div>
     <div id="footer">
-        <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
+        <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
 </body>
 </html>
