--- a/history.html
+++ b/history.html
@@ -33,7 +33,7 @@
     <div id="content">
     </div>
     <div id="footer">
-        <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
+        <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
 </body>
 </html>
