added fun fact box

--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
         <p style="float: left; margin-left: 2.5vw; margin-top: 5vh">Water Power is an important source of energy. It gives power to tons of people and devices. It harnesses the movement and cycle of water and its vast flowing rivers.
         <br><br>Its vast history built up empires and helped poeple crush others. Water power was not only used for war, poeple also used it to move objects and power mills.
         <br><br>However, it can damage the ecosystem by changing many natural forces and kill animals. Water power isn't all that bad, it is better for the eviroment that many other energy sources.
-        <br><br>Water power can't be fully understood if people don't know how water power is harnessed. It is made from two main methods, dams and the way of the river which both rely on the water cycyle.</p>
+        <br><br>Water power can't be fully understood if people don't know how water power is harnessed. It is made from two main methods, dams and the way of the river which both rely on the water cycle.</p>
         <img src="water-wheel.jpg" id="imghome" style="width: 19vw; bottom: 33vh;">
         <img src="3l-Akosombo.jpg" id="imghome" style="width: 19vw;">
     </div>
