--- a/climate.html
+++ b/climate.html
@@ -41,6 +41,7 @@
         <div id="invisidiv"><p id="backtext"><br>Another problem with water power is its immense cost. It costs a lot of money (and time) to build a big bridge with turbines and generators. The cost to maintain is also high. Things like leakages, turbine malfunctions, and breakages drive up the cost a lot.</p></div>
         <p style="margin-top: 57.5vh"><br><br>Water power may have its advantages, but it still has its flipsides.</p>
     </div>
+    <div id="featurebox"><p style="margin-top: 0">*Add Fun Fact Thing Here*</p></div>
     <div id="footer" style="margin-top: 84.5vh;">
     <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
