--- a/history.html
+++ b/history.html
@@ -30,9 +30,25 @@
             <p>How It Works</p>
         </div></a>
     </div>
-    <div id="content">
+    <div id="content" style="padding-right: 0; width: 77vw; z-index: 10; height: 70vh">
+        <p>We currently use water power, but we also used water power in the past in many ways you might not expect.</p>
+        <br>
+        <div id="hoverdiv"><p>test </p>
+            <span class="material-symbols-outlined md-36" style="margin-top: 0">toys_fan</span>
+            <p id="backtext2">Egy</p><div id="coverdiv"></div>
+        </div>
+        <br><br><br><br>
+        <div id="hoverdiv"><p>test </p>
+            <span class="material-symbols-outlined md-36" style="margin-top: 0">toys_fan</span>
+            <p id="backtext2"></p><div id="coverdiv"></div>
+        </div>
+        <br><br><br><br>
+        <div id="hoverdiv"><p>test </p>
+            <span class="material-symbols-outlined md-36" style="margin-top: 0">toys_fan</span>
+            <p id="backtext2"></p><div id="coverdiv"></div>
+        </div>
     </div>
-    <div id="footer">
+    <div id="footer" style="margin-top: 74.5vh">
         <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
 </body>
