just have to add images

--- a/history.html
+++ b/history.html
@@ -30,26 +30,32 @@
             <p>How It Works</p>
         </div></a>
     </div>
-    <div id="content" style="padding-right: 0; width: 77vw; z-index: 10; height: 70vh">
+    <div id="content" style="padding-right: 0; width: 77vw; z-index: 10; height: 84vh">
         <p>We currently use water power, but we also used water power in the past in many ways you might not expect.</p>
+        <p>To see the text, hover over the titles.</p>
         <br>
-        <div id="hoverdiv"><p>test </p>
-            <span class="material-symbols-outlined md-36" style="margin-top: 0">toys_fan</span>
-            <p id="backtext2">Egy</p><div id="coverdiv"></div>
+        <div id="hoverdiv"><p>Egypt </p>
+            <span class="material-symbols-outlined md-36" style="margin-top: 3vh; color: rgb(142, 142, 61)">toys_fan</span>
+            <p id="backtext2">Egyptians used water wheels as early as 2500 BCE. These aren't the water wheels and turbines we might use nowadays, instead, they used wooden water wheels to harness the currents to move objects around.</p><div id="coverdiv"></div>
         </div>
         <br><br><br><br>
-        <div id="hoverdiv"><p>test </p>
-            <span class="material-symbols-outlined md-36" style="margin-top: 0">toys_fan</span>
-            <p id="backtext2"></p><div id="coverdiv"></div>
+        <div id="hoverdiv"><p>The Romans </p>
+            <span class="material-symbols-outlined md-36" style="margin-top: 3vh; color: brown">toys_fan</span>
+            <p id="backtext2">Even the Romans used water power in the 1st century BCE. However, if we jump forward to the 1800s, people used water power to power mills.</p><div id="coverdiv"></div>
         </div>
         <br><br><br><br>
-        <div id="hoverdiv"><p>test </p>
-            <span class="material-symbols-outlined md-36" style="margin-top: 0">toys_fan</span>
-            <p id="backtext2"></p><div id="coverdiv"></div>
+        <div id="hoverdiv"><p>Mills </p>
+            <span class="material-symbols-outlined md-36" style="margin-top: 3vh; color: green;">toys_fan</span>
+            <p id="backtext2">The wheel gets spun by water, spinning another wheel like gears. Finally, it reaches the place the mill was made to power.</p><div id="coverdiv"></div>
+            <br><br>
         </div>
+        <br><br>
+        <p>In conclusion, water power is not only used today but was also used in the past.</p>
     </div>
-    <div id="footer" style="margin-top: 74.5vh">
+    <img src="waterwheel-Noria-aqueduct-Hamah-Syria.webp" style="float:right; width: 19vw; height: 22vh; margin-right: 1vw; margin-top: 2.5vh;">
+    <div id="footer" style="margin-top: 88.5vh">
         <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
+    <div id="filler"></div>
 </body>
 </html>
