--- a/history.html
+++ b/history.html
@@ -53,7 +53,13 @@
         <p>In conclusion, water power is not only used today but was also used in the past.</p>
     </div>
     <img src="waterwheel-Noria-aqueduct-Hamah-Syria.webp" style="float:right; width: 19vw; height: 22vh; margin-right: 1vw; margin-top: 2.5vh;">
-    <div id="footer" style="margin-top: 88.5vh">
+    <div id="header" style="margin-top: 88.5vh; height: 25vh">
+        <img src="8875af8948ab31b544b6f9b823ee01d2.jpg" style="margin-top: 2vh; height: 21vh; float: center; margin-left: 1vw">
+        <img src="istockphoto-518842988-612x612.jpg" style="margin-top: 2vh; height: 21vh; float: center; margin-left: 1vw">
+        <img src="Waterwheel-Hamah-irrigation-Syria-region-Tigris-Euphrates.webp" style="margin-top: 2vh; height: 21vh; float: center; margin-left: 1vw">
+        <img src="Water-wheel.jpg" style="margin-top: 2vh; height: 21vh; float: center; margin-left: 1vw">
+    </div>
+    <div id="footer" style="margin-top: 2.5vh;">
         <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
     <div id="filler"></div>
