--- a/works.html
+++ b/works.html
@@ -4,9 +4,39 @@
     <link rel="icon" type="image/x-icon" href='oceans.png'>
     <link rel="stylesheet" href="oceanstyles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>sampletext</title>
+    <title>How Water Power Works</title>
     <meta name="viewport" content="height=device-height width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <div id="header"><h1>How Water Power Works</h1></div>
+    <div id="sidebar">
+        <span class="material-symbols-outlined md-36">expand_more</span>
+        <h1 style="margin-right: 2vw">Menu</h1>
+        <a href="home.html"><div id="sidebarpiece">
+            <p>Home</p>
+        </div></a>
+        <a href="history.html"><div id="sidebarpiece">
+            <p>History</p>
+        </div></a>
+        <a href="modern.html"><div id="sidebarpiece">
+            <p>Modern Use</p>
+        </div></a>
+        <a href="climate.html"><div id="sidebarpiece">
+            <p>Problems</p>
+        </div></a>
+        <a href="works.html"><div id="sidebarpiece">
+            <p>How It Works</p>
+        </div></a>
+    </div>
+    <div id="content" style="padding-right: 0; width: 77vw;">
+        <br><p>Water power heavily relies on moving water as well as the water cycle to harness energy. Water is harnessed using two main methods.</p>
+        <br><p>Water power be made by natural forces, the flow of river, as well as non-natural forces,dams.</p>
+        <br><p>In the flow of river method, a turbine gets spun by the flow of a river and spins the generator creating energy.</p>
+        <br><p>In a dam, the stored water on the top gets released, turning the turbine and later powers the generator. Some even have a lower reservoir to store water and pump it back up.</p>
+        <br><p>In conclusion, water power can be created in different ways by different forces.</p>
+    </div>
+    <div id="footer">
+        <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
+    </div>
 </body>
 </html>
