added vocav & stuff

--- a/climate.html
+++ b/climate.html
@@ -42,8 +42,9 @@
         <p style="margin-top: 62.5vh">Water power may have its advantages, but it still has its flipsides.</p>
     </div>
     <div id="featurebox"><p style="margin-top: 0"><br><br>Fun Fact: China produces the most amount of hydroelectricity per year.<br><br></p></div>
-    <div id="footer" style="margin-top: 90vh;">
-    <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
+    <div id="header" style="margin-top: 90vh"><pre><p><span style="font-size: 125%;">Vocabulary:</span>      <a href="https://www.merriam-webster.com/dictionary/greenhouse%20effect">Greenhouse Effect</a>,       <a href="https://www.merriam-webster.com/dictionary/methane">Methane</a>,      <a href="https://www.merriam-webster.com/dictionary/ecosystem">Ecosystem</a></p></pre></div>
+    <div id="footer" style="margin-top: 2.5vh;">
+        <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
     <div id="filler"></div>
 </body>
