--- a/history.html
+++ b/history.html
@@ -59,6 +59,7 @@
         <img src="Waterwheel-Hamah-irrigation-Syria-region-Tigris-Euphrates.webp" id="imghistory">
         <img src="Water-wheel.jpg" id="imghistory">
     </div>
+    <div id="header"><pre><p><span style="font-size: 125%;">Vocabulary:</span>      <a href="https://www.merriam-webster.com/dictionary/turbine">Turbine</a>,       <a href="https://www.merriam-webster.com/dictionary/currents">Currents</a>,      <a href="https://www.merriam-webster.com/dictionary/mill">Mills</a></p></pre></div>
     <div id="footer" style="margin-top: 2.5vh;">
         <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
