--- a/modern.html
+++ b/modern.html
@@ -41,13 +41,16 @@
     <div id="content" style="height: 76.5vh;">
         <p>Water power is still widely used across the world. Being reliable and renewable, some countries use water power as their substitute for climate agreements.</p>
         <p id="modernhover">Hover me to see the text!</p>
-        <br><div id="modern1"><p id="backtext3">Worldwide, hydroelectricity makes up one fifth of the world's power and 7% of the United States'. Dams originally were built to control floods and to tame the rivers, however, dams were soon erected for power more and more as demand increased.</p>
-        </div><br><br><div id="modern2"><p id="backtext3">Reservoirs are built nearby to control the waterflow to produce more electricity. Nowadays, the amount of water power produced is slowly being lowered as other alternatives are being found as the cost of water power is very high.</p>
-        </div><br><br><div id="modern3"><p id="backtext3">Other methods of producing water power include tidal power, which harnesses the moon's tidal force to produce energy, and wave power, which involves placing an air-filled device to capture the sea's energy. Although less common, you will still see water wheels in old fashioned places and displays.</p>
-        </div><br><br><p style="margin-top: 25vh">Overall, water power is still used in a variety of ways today.</p>
+        <br><p id="backtext3">Worldwide, hydroelectricity makes up one fifth of the world's power and 7% of the United States'. Dams originally were built to control floods and to tame the rivers, however, dams were soon erected for power more and more as demand increased.</p>
+        <div id="modern1"></div><br><br><p id="backtext3">Reservoirs are built nearby to control the waterflow to produce more electricity. Nowadays, the amount of water power produced is slowly being lowered as other alternatives are being found as the cost of water power is very high.</p>
+        <div id="modern2"></div><br><br><p id="backtext3">Other methods of producing water power include tidal power, which harnesses the moon's tidal force to produce energy, and wave power, which involves placing an air-filled device to capture the sea's energy. Although less common, you will still see water wheels in old fashioned places and displays.</p>
+        <div id="modern3"></div><br><br><p style="margin-top: 25vh">Overall, water power is still used in a variety of ways today.</p>
         </p>
+        <img src="download.jpg" id="imgmodern" style="width: 19vw; bottom: 51vh;">
+        <img src="Hydroelectric-big-dams----009.webp" id="imgmodern" style="width: 19vw; bottom: 24.5vh;">
     </div>
-    <div id="footer" style="margin-top: 82vh">
+    <div id="header" style="margin-top: 81vh"><pre><p><span style="font-size: 125%;">Vocabulary:</span>      <a href="https://www.merriam-webster.com/dictionary/hydroelectricity">Hydroelectricity</a>,       <a href="https://www.merriam-webster.com/dictionary/reservoirs">Reservoirs</a>,      <a href="https://www.merriam-webster.com/dictionary/tidal">Tidal</a></p></pre></div>
+    <div id="footer" style="margin-top: 2.5vh">
         <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
     <div id="filler"></div>
