--- a/works.html
+++ b/works.html
@@ -29,10 +29,10 @@
         </div></a>
     </div>
     <div id="content" style="padding-right: 0; width: 77vw;">
-        <br><p>Water power heavily relies on moving water as well as the water cycle to harness energy. Water is harnessed using two main methods.</p>
-        <br><p>Water power be made by natural forces, the flow of river, as well as non-natural forces,dams.</p>
-        <br><p>In the flow of river method, a turbine gets spun by the flow of a river and spins the generator creating energy.</p>
+        <p>Water power heavily relies on moving water to harness energy. Water power is controlled using two main methods, dams and the current of a river.</p>
+        <br><p>Both techniques harness water's energy using a turbine and a generator. The turbine gets spun by the flow and spins the generator creating energy.</p>
         <br><p>In a dam, the stored water on the top gets released, turning the turbine and later powers the generator. Some even have a lower reservoir to store water and pump it back up.</p>
+        <br><p>The river strategy relies on natural forces. The people put a turbine in the middle of the river, and the same happens. People use other methods, but these two methods are the most common.</p>
         <br><p>In conclusion, water power can be created in different ways by different forces.</p>
     </div>
     <div id="footer">
