--- a/home.html
+++ b/home.html
@@ -30,16 +30,18 @@
             <p>How It Works</p>
         </div></a>
     </div>
-    <div id="content">
+    <div id="content" style="height: 63vh">
         <p style="float: left; margin-left: 2.5vw; margin-top: 5vh">Water Power is an important source of energy. It gives power to tons of people and devices. It harnesses the movement and cycle of water and its vast flowing rivers.
         <br><br>Its vast history built up empires and helped poeple crush others. Water power was not only used for war, poeple also used it to move objects and power mills.
         <br><br>However, it can damage the ecosystem by changing many natural forces and kill animals. Water power isn't all that bad, it is better for the eviroment that many other energy sources.
-        <br><br>Water power can't be fully understood if people don't know how water power is harnessed. It is made from two main methods, dams and the way of the river which both rely on the water cycle.</p>
+        <br><br>Water power can't be fully understood if people don't know how water power is harnessed. It is made from two main methods, dams and the way of the river which both rely on the water cycle.
+        <br><br>As it is hard to click on any text, all vocabulary will be in a box above the footer.</p>
         <img src="water-wheel.jpg" id="imghome" style="width: 19vw; bottom: 33vh;">
         <img src="3l-Akosombo.jpg" id="imghome" style="width: 19vw;">
     </div>
-    <div id="footer">
+    <div id="footer" style="margin-top: 67.5vh">
         <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
+    <div id="filler"></div>
 </body>
 </html>
