--- a/works.html
+++ b/works.html
@@ -28,15 +28,21 @@
             <p>How It Works</p>
         </div></a>
     </div>
-    <div id="content" style="padding-right: 0; width: 77vw;">
+    <div id="content" style="padding-right: 0; width: 77vw; height: 110.5vh">
         <p>Water power heavily relies on moving water to harness energy. Water power is controlled using two main methods, dams and the current of a river.</p>
         <br><p>Both techniques harness water's energy using a turbine and a generator. The turbine gets spun by the flow and spins the generator creating energy.</p>
-        <br><p>In a dam, the stored water on the top gets released, turning the turbine and later powers the generator. Some even have a lower reservoir to store water and pump it back up.</p>
+        <br><p>Like this, but more complicated:</p>
+        <br><img id="imgworks" src="image_processing20200410-19194-181rmec.png" style="height: 30vh; margin-left: 1vw;">
+        <p>In a dam, the stored water on the top gets released, turning the turbine and later powers the generator. Some even have a lower reservoir to store water and pump it back up.</p>
         <br><p>The river strategy relies on natural forces. The people put a turbine in the middle of the river, and the same happens. People use other methods, but these two methods are the most common.</p>
         <br><p>In conclusion, water power can be created in different ways by different forces.</p>
     </div>
-    <div id="footer">
+    <img src="kentucky-dam-main.jpg" style="width: 19vw; height: 21vh; float: right; margin-top: 2.5vh; margin-right: 1vw;">
+    <img src="download.jpg" style="width: 19vw; float: right; height: 25vh; margin-top: 2.5vh; margin-right: 1vw;">
+    <div id="header" style="margin-top: 115vh"><pre><p><span style="font-size: 125%;">Vocabulary:</span>      <a href="https://www.merriam-webster.com/dictionary/turbine">Turbine</a>,       <a href="https://www.merriam-webster.com/dictionary/generator">Generator</a>,      <a href="https://www.merriam-webster.com/dictionary/reservoir">Reservoir</a></p></pre></div>
+    <div id="footer" style="margin-top: 2.5vh">
         <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.<br><a href="citations.html" style="color:rgb(46, 218, 138)">Click me to see citations & copyright.</a></p>
     </div>
+    <div id="filler"></div>
 </body>
 </html>
