--- a/citations.html
+++ b/citations.html
@@ -4,9 +4,35 @@
     <link rel="icon" type="image/x-icon" href='oceans.png'>
     <link rel="stylesheet" href="oceanstyles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>sampletext</title>
+    <title>Citations</title>
     <meta name="viewport" content="height=device-height width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <div id="header"><h1>Citations</h1></div>
+    <div id="sidebar">
+        <span class="material-symbols-outlined md-36">expand_more</span>
+        <h1 style="margin-right: 2vw">Menu</h1>
+        <a href="home.html"><div id="sidebarpiece">
+            <p>Home</p>
+        </div></a>
+        <a href="history.html"><div id="sidebarpiece">
+            <p>History</p>
+        </div></a>
+        <a href="modern.html"><div id="sidebarpiece">
+            <p>Modern Use</p>
+        </div></a>
+        <a href="climate.html"><div id="sidebarpiece">
+            <p>Problems</p>
+        </div></a>
+        <a href="works.html"><div id="sidebarpiece">
+            <p>How It Works</p>
+        </div></a>
+    </div>
+    <div id="content" style="padding-right: 0; width: 77vw">
+        <cite>Hydroelectric Power Water Use | U.S. Geological Survey. (2018, August 30). Hydroelectric Power Water Use | U.S. Geological Survey. https://www.usgs.gov/special-topics/water-science-school/science/hydroelectric-power-water-use#:~:text=Hydropower%20does%20not%20pollute%20the,habitats%20in%20the%20dam%20area.Hydro Power. (n.d.). <br><br>Hydro Power — Sources — Student Energy. https://studentenergy.org/source/hydro-power/?gclid=CjwKCAiAoOz-BRBdEiwAyuvA66oewCIII3PNFDa5ZUWbyE1qTdpD8EiQoUvTtlNRHKYd5gBpRGqGnxoCO20QAvD_BwEwaterpower. (n.d.). <br><br>Britannica Kids. https://kids.britannica.com/students/article/waterpower/277668Types of Renewable Energy. (2020, December 2). <br><br>Newsela. Retrieved February 15, 2023, from https://newsela.com/read/natgeo-renewable-energy/id/2000002211 <br><br>Hydropower explained. (2022, October 22). Newsela.</cite>
+    </div>
+    <div id="footer" style="line-height: 17vh">
+        <p style="color:rgb(46, 218, 138); margin-left: 1.5vw;">Copyright Adam Haspel & Hee-Seo Yang 2022. All Rights Reserved.</p>
+    </div>
 </body>
 </html>
